Bug 745077 - Reconfigure InputReader on screen rotation. r=mwu a=b2g-only